  - ``with obj.contextbound()``, use ``with obj:`` instead.
- ``logbook.concurrency.enable_gevent``, use ``gevent.monkey`` instead.
- ``logbook.concurrency.is_gevent_enabled``.
- ``logbook.concurrency.new_fine_grained_lock``.
- The ``compression`` extra. Replace ``Logbook[compression]`` with
  ``Logbook[brotli]`` if you are using ``BrotliCompressionHandler``

Fixed
~~~~~

- The previous contextvars implementation (used by ``push_context``,
  ``pop_context``, and ``contextbound``) was completely broken. The new
  implementation supersedes the previous default (using thread locals), and is
  now the default.


Version 1.8.2
-------------

- TimedRotatingFileHandler was sensitive to changes in the current work
  directory if ``filename`` was a relative path.
- Wheels are built for Linux arm64

Version 1.8.1
-------------

- Fixed crash on Python 3.12+ in speedups extension module.

Version 1.8.0
-------------

- Python 3.13 support
- Fixed deprecation warnings on Python 3.12
- Dropped support for Python 3.8

Version 1.7.0.post0
-------------------

Released on November 11th, 2023

- Ensure setuptools can read version number statically during build

Version 1.7.0
-------------

Released on October 3rd, 2023

- Dropped support for Python 3.7
- Passing (keyfile, certfile) to MailHandler's ``secure`` argument is deprecated
  in favour of passing an ``ssl.SSLContext``.
- Python 3.12 support

Version 1.6.0
-------------

Released on July 30th, 2023

- Dropped support for Python 2.7, 3.5, and 3.6.
- Uses pyproject.toml based build.
- Added nteventlog extra for NTEventLogHandler.
- Supports SQLAlchemy 1.4 and 2.0.
- Fix various deprecation warnings.
- exc_info arg may be a BaseException instance (thanks Mattijs Ugen)
- FileHandler supports path-like objects.
- Fixed bug which prevented compilation on Cython 3
- Wheels are generated for more platforms and architectures

Version 1.5.3
-------------

Released on October 16th, 2019
